[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/ui/helper/arrowButton.gd" type="Script" id=1]
[ext_resource path="res://scenes/ui/helper/shadowTextLabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/libremon_custom.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="ArrowButton" type="Button"]
size_flags_vertical = 8
custom_colors/font_color_disabled = Color( 0, 0, 0, 0 )
custom_colors/font_color_focus = Color( 0, 0, 0, 0 )
custom_colors/font_color = Color( 0, 0, 0, 0 )
custom_colors/font_color_hover = Color( 0, 0, 0, 0 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 0 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
action_mode = 0
text = "| "
flat = true
align = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow" parent="." instance=ExtResource( 2 )]
visible = false
margin_right = 8.0
margin_bottom = 28.0
text = "|"

[node name="MainText" parent="." instance=ExtResource( 2 )]
margin_left = 14.0
margin_right = 14.0
margin_bottom = 28.0

[connection signal="focus_entered" from="." to="." method="_on_ArrowButton_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_ArrowButton_focus_exited"]
